<resources>
    <string name="app_name">My_Smk_App</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_home">Home</string>
    <string name="title_materi">Materi</string>
    <string name="title_tugas">Tugas</string>
    <string name="title_absensi">Absensi</string>
    <string name="title_evaluasi">Evaluasi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>