<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/materi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/title_materi" />
    <item
        android:id="@+id/tugas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_list_alt_24"
        android:title="@string/title_tugas" />
    <item
        android:id="@+id/absensi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_co_present_24"
        android:title="@string/title_absensi" />
    <item
        android:id="@+id/evaluasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_quiz_24"
        android:title="@string/title_evaluasi" />
</menu>