<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".Activity.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:optRoundCardCornerRadius="30dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardRightBottomCorner="false">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="15dp">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/et_shape"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/et_shape"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:selectAllOnFocus="true"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.551"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_username" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/lavender"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.576"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </com.github.captain_miao.optroundcardview.OptRoundCardView>


</androidx.constraintlayout.widget.ConstraintLayout>